...
                }
                .frame(width: 15, height: 15)
                .padding(8)
                .background(.background)
                .cornerRadius(10)
                .shadow(radius: 4)
                .accessibilityIdentifier("LocationMapView_Zoom")
            }
            .padding(10)
            
            .onChange(of: filter, perform: { _ in
                withAnimation {
                    filterChanged()
...
