...
                Button {
                    vm.stepBack()
                } label: {
                    Image(systemName: "chevron.left").fontWeight(.semibold)
                }
                .buttonStyle(.bordered)
                .accessibilityIdentifier("HistoryGraphView_Back")
                Spacer()

                Text(vm.xAxisLabel)
                    .font(.callout).bold()

                Spacer()
...
